<resources>
    <!-- Strings for the activity_main.xml -->
    <string name="app_name">TTTEvanDenys</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_about">About</string>
    <string name="btn_zero">Zero</string>
    <string name="btn_scores">Scores</string>
    <string name="btn_play">Play</string>
    <string name="playing_player1">Player vs Player</string>
    <string name="playing_droid">Playing VS Droid</string>

    <!-- Strings for activity_score.xml -->
    <string name="stats">Statistics</string>
    <string name="tv_player1_wins">Player1 Wins:</string>
    <string name="tv_player2_wins">Player2 Wins:</string>
    <string name="tv_droid_wins">Droid Wins:</string>
    <string name="tv_draws">Draws:</string>

    <!-- TOAST MESSAGES -->
    <string name="zero_toast">Reset Scores to 0</string>
    <string name="draw_toast">DRAW! Reset to play again</string>
    <string name="p1_win_toast">Player1 Wins!</string>
    <string name="p2_win_toast">Player2 Wins!</string>
    <string name="droid_wins_toast">Droid Wins!</string>

    <!-- About -->
    <string name="about_text"><b>Tic Tac Toe</b> a game of true wit, where players place either an X or an
    O in 3 consecutive spaces to score a point and win the game! Play as much as you like, scores are
    stored in the Scores section of this app. Don\'t forget, this is just a game and remember to have fun!</string>
    <string name="about_authors"> Written by:\nEvan Glicakis\nDenys Melyukhov</string>

    <!-- Alert Dialog -->
    <string name="alert_title">Winner!</string>
    <string name="alert_message_p1">You win! Click on Reset to play again.</string>
    <string name="alert_message_p2">Player2 Wins! Click on Reset to play again.</string>
    <string name="alert_message_droid">Droid Wins</string>
</resources>
