<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ttt.de.tttevandenys.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_1"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_2"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_3"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_4"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_5"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_6"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_7"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_8"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="@dimen/tile_size"
            android:layout_height="@dimen/tile_size"
            android:id="@+id/tile_9"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/playing_tv"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:id="@+id/tv_playing"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="01"
        android:gravity="bottom">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_reset"
            android:textSize="@dimen/btn_font_size"
            android:id="@+id/btn_reset"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/btn_about"
            android:id="@+id/btn_about"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/btn_zero"
            android:id="@+id/btn_zero"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/btn_scores"
            android:id="@+id/btn_scores"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/btn_font_size"
            android:text="@string/btn_play"
            android:id="@+id/btn_play"/>

    </LinearLayout>
</LinearLayout>
